[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/art/placeholders/img/soul.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/StartGameMenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/gui/QuitMenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/placeholders/img/skull.png" type="Texture" id=5]
[ext_resource path="res://scenes/fx/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/gui/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://assets/music/sacrifices_menu.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/VenomMincho.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 16
font_data = SubResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 1104.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.160784, 0.0941176, 0.0941176, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Sacrifices must be made"
align = 1
valign = 1

[node name="Logo" type="TextureRect" parent="Menu"]
margin_top = 69.0
margin_right = 1104.0
margin_bottom = 101.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 105.0
margin_right = 1104.0
margin_bottom = 361.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 550.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="StartGameMenuButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 58.0
margin_right = 550.0
margin_bottom = 118.0

[node name="QuitMenuButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 138.0
margin_right = 550.0
margin_bottom = 198.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 554.0
margin_right = 1104.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 147.0
margin_right = 403.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 365.0
margin_right = 1104.0
margin_bottom = 620.0
size_flags_vertical = 3
text = "Version 0.1
Made by BlackMadGames Studio"
align = 2
valign = 2

[node name="FadeIn" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0
autoplay = true
[connection signal="button_up" from="Menu/CenterRow/Buttons/StartGameMenuButton" to="." method="_on_StartGameMenuButton_button_up"]
[connection signal="button_up" from="Menu/CenterRow/Buttons/QuitMenuButton" to="." method="_on_QuitMenuButton_button_up"]
